appId: keybase.ios
---
- runFlow: ../subflows/escape-to-tabs.yaml
- tapOn:
    text: "More"
- tapOn:
    text: ".*Git"
    retryTapIfNoChange: false
- extendedWaitUntil:
    visible:
      id: "git-repo-list"
    timeout: 3000
- takeScreenshot: tests/results/ios-debug/git
- runFlow:
    when:
      visible:
        id: "git-repo-row"
    commands:
      - takeScreenshot: tests/results/ios-debug/git-repo-row
