appId: keybase.ios
---
- runFlow: ../subflows/escape-to-tabs.yaml
- tapOn:
    text: "More"
- extendedWaitUntil:
    visible:
      id: "settings-account"
    timeout: 3000
- tapOn:
    text: "Account"
- extendedWaitUntil:
    visible:
      text: "Email & phone"
    timeout: 3000
- takeScreenshot: tests/results/ios-debug/settings-navigation
