appId: keybase.ios
---
- tapOn:
    text: "More"
- tapOn:
    text: ".*Git"
    retryTapIfNoChange: false
- extendedWaitUntil:
    visible:
      id: "git-repo-list"
    timeout: 3000
- takeScreenshot: tests/results/ios-debug/smoke-git
- tapOn:
    id: "backButton"
